app/assets/stylesheets/user_profile.scss
// $button-hover: #000080;
$button-hover: grey;


.currently-hidden {
  display: none;
}

.user-profile-body {
  background-color: #F5F5F5;
  min-height: 100vh;
  padding-top: 95px;
  display: flex;
  justify-content: center;
  padding-bottom: 80px;
  // font-family: cambria;//////
}

.user-profile-middle {
  width: 700px;
  min-width: 700px;
}

.user-profile-top-span {
  display: flex;
  justify-content: space-between;
}

.user-profile-top-span, .back-browse-link {
  min-width: 140px;
  min-height: 40px;
  font-size: 18px;
  // font-family: cambria;//////
  display: flex;
  align-items: flex-end;
}

.back-browse-link {
  color: rgba(0, 0, 0, 0.5);
  text-decoration: none;
}

.back-browse-link span {
  padding: 5px;
}

.my-profile-label {
  text-align: center;
  justify-content: center;
  font-size: 21px;
}

.edit-profile-button {
  background-color: #0098dc;
  display: flex;
  justify-content: center;
  align-items: center;
  color: white;
  border-radius: 4px;
  text-decoration: none;
  min-height: 40px;
  min-width: 140px;
  font-size: 18px;
}

.edit-profile-button:hover {
  background-color: $button-hover;
}

.user-profile-pic-info-container {
  margin-top: 15px;
}

.profile-full-pic {
  width: 100%;
  cursor: pointer;
}

.profile-pic-section {
  position: fixed;
}

.user-profile-pic-info-container figure {
  // min-height: 390px;
  max-width: 345px;
  max-height: 390px;
  border-radius: 4px;
  overflow: hidden;
}

.profile-pic-footer {
  display: flex;
  height: 31px;
  width: 335px;
  background: white;
  position: relative;
  border-radius: 4px;
  margin-top: -36px;
  margin-left: 5px;
  justify-content: center;
  align-items: center;
  i {
    color: #0098dc;
  }
}

.profile-info-container {
  float: right;
}

.match-summary {
  min-width: 345px;
  max-width: 345px;
  min-height: 100px;
  background-color: white;
  margin-bottom: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  border-radius: 4px;
}

.match-summary h3 {
  font-weight: bold;
}

.match-summary p {
  padding: 20px;
  line-height: 1.3;
}

.match-summary i {
  padding-top: 20px;
  padding-bottom: 5px;
  color: #0098dc;
}

.profile-info-box-top-part {
  min-width: 345px;
  max-width: 345px;
  min-height: 100px;
  background-color: white;
  margin-bottom: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  border-radius: 4px;
}

.profile-info-box-second-part {
  min-width: 345px;
  max-width: 345px;
  min-height: 100px;
  background-color: white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  border-radius: 4px;
}

.profile-info-box-second-part span {
  line-height: 1.5;
  // font-family: cambria;//////
  // font-weight: bold;
}

.profile-info-box-second-part i {
  color: #0098dc;
  padding-right: 10px;
}

.profile-name-age {
  padding-top: 20px;
}

.profile-name {
  font-size: 20px;
  // font-family: cambria;//////
  font-weight: bold;
}

.user-about-me {
  font-size: 15px;
  padding: 20px;
  font-size: 16px;
}

#user-about-me-less {
  padding-bottom: 0px;
  max-height: 250px;
  overflow: hidden;
}

.fas.fa-plus-circle, .fa-plus-circle.fas, .fas.fa-minus-circle {
  float: right;
  margin-right: 8px;
  margin-bottom: -9px;
  color: #0098dc;
  cursor: pointer;
}

.user-personal-info {
  padding: 10px 20px 10px 20px;
  display: flex;
}

#make-reg-font {
  font-weight: normal;
}

#online-now-text {
  color: #00FF00;
}

.profile-interaction-section {
  height: 50px;
  // border: 1px solid;
  // background: white;
  // border-radius: 4px;
  height: 50px;
  border-radius: 4px;
  width: 337px;
  margin-left: 3px;
  opacity: 0.8;
  position: relative;
  margin-top: -56px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.heart-circle {
  // border: 1px solid;
  height: 41px;
  width: 41px;
  border-radius: 50%;
  display: flex;
  cursor: pointer;
  // background: orange;
  margin: -47px auto;
  position: relative;
}

#heart-clicked-animation {
  animation-name: clicked-heart;
  animation-duration: 3s;
}

@keyframes clicked-heart {
  0% {opacity: 0;}
  50% {opacity: .5;}
  100% {opacity: 1;}
}

#heart-circle-unliked {
  background: none;
  border: none;
}

.heart-circle:hover {
  // background: #ffd280;
}

.heart-circle i {
  color: #FF6347;
  margin: 7px auto;
}

.you-like-text {
  color: red;
  margin-left: -122px;
}

